# OmniSpatialAI

./: .gitignore  404.html  CLAUDE.md  CNAME  GEMINI.md  README.md  index.html  mkdocs.yml  sitemap.xml
GIS/: folium_kml.py  index.html
Planning/mapping/: CMakeLists.txt
Planning/mapping/src/: paths_cross_points.cpp  test_cross_points.cpp  test_with_simulation.cpp
SLAM/: index.html
SLAM/slam_benchmark/: index.html
SLAM/slam_benchmark/slam_dataset/: index.html
SLAM/slam_benchmark/slam_simulation/: index.html
SLAM/slam_frameworks/: index.html
SLAM/slam_loopclosure/: index.html
SLAM/slam_loopclosure/visual_vocabulary/: index.html
SLAM/slam_mapping/: index.html
SLAM/slam_odometry/: index.html
SLAM/slam_odometry/visual_odometry/: index.html
SLAM/slam_qa/slam_run_tips/: index.html
SLAM/visual_vocabulary/dbow_demos/: CMakeLists.txt  create_voc.cpp  demo_dbow2.cpp  loop_closure.cpp
XR/: index.html
XR/app/: index.html
XR/app/ar_glass/: index.html
XR/func/: index.html
XR/func/track/: index.html
XR/meta/: index.html
XR/sdk/: index.html
autonomous_driving/: index.html
control_system/: index.html
docs/: CNAME
docs/GIS/: README.md
docs/SLAM/: README.md
docs/SLAM/slam_benchmark/: README.md
docs/SLAM/slam_loopclosure/: README.md
docs/SLAM/slam_odometry/: README.md
docs/superpowers/plans/: 2026-04-13-repo-restructure.md
gis/data/: fusion_gps.csv  fusion_state.csv  ss.kml
navigation/planning/sim_path/: CMakeLists.txt
navigation/planning/sim_path/src/: paths_cross_points.cpp  test_cross_points.cpp  test_with_simulation.cpp
navigation/sai_nav/: README.md  package.xml
navigation/sai_nav/launch/: nav2.launch.py  sim_tb3_world.launch.py
path_planning/: index.html
planning/mapping/include/mapping/: paths_cross_points.h
robot_xr/: index.html
ros/: index.html
ros/ros_matlab/: index.html
scripts/: file_cx.md
scripts/code/: code_count.sh
scripts/docker/: run_docker.sh
scripts/draw/: draw_fusion.py  draw_sensors.py  draw_state.py  draw_time.py  draw_xxx.py
scripts/kd/: kd.py
scripts/msf/: README.md
scripts/network/: wifi_setup.sh  wpa_supplicant.conf
scripts/sensor_data/depth_map/: depth_analysis.py  depth_roi.py  depth_select_points.py  depth_show_value.py  vis_pcl.py  vis_pcl_batch.py  vis_pts3d.py
scripts/sensor_data/gnss/: nmea2enu.py
scripts/sensor_data/ros2bag/: README.md  ros2bag_create.py  ros2bag_read.py
scripts/sensor_data/rosbag/: ros2video.py  ros_bag.md  show_image_from_bag.py
scripts/soc/: check_npu_load.sh  cpu_affinity.md  scaling_frequency.sh  soc_benchmark.md
scripts/upstart/: READE.md  robot_upstart.sh  sai_vod.sh  sai_vod_upstart.sh  upstart_setting.sh
scripts/upstart/startup_service/: sai_app.service  sai_app.sh  sai_sensor.service  sai_sensor.sh
search/: search_index.json
sim/: index.html
sim/gazebo/: index.html
slam/slam_frameworks/slam_toolbox/maps/: my_map.pgm  my_map.yaml
slam/visual_vocabulary/dbow_demos/: util.hpp
space/: README.md
ws_ros1/src/: README.md
ws_ros1/src/movebase_demo/: package.xml
ws_ros1/src/movebase_demo/launch/: movebase_demo_configuration_gazebo.launch
ws_ros1/src/robot_description/: CMakeLists.txt  package.xml
ws_ros1/src/robot_description/launch/: display.launch  display_state_pub.launch  gazebo.launch  gazebo1.launch  gazebo_wg.launch
ws_ros1/src/robot_description/urdf/: robot1.urdf  robot1.xacro  robot1_arm.xacro  robot1_base_01_cam.xacro  robot1_base_01_cam_hok.xacro  robot1_base_02.xacro  robot1_base_03.xacro  robot1_base_04.xacro  robot1_physics.urdf  robot_car_dae.urdf
ws_ros1/src/robot_gazebo/: CMakeLists.txt  package.xml
ws_ros1/src/robot_gazebo/launch/: gazebo.launch  gazebo1.launch  gazebo_terrain.launch
ws_ros2/src/sai_nav/: CMakeLists.txt
ws_ros2/src/sai_nav/launch/: sim_empty_world.launch.py
ws_ros2/src/sai_nav/urdf/: diy_robot.urdf.xacro
ws_ros2/src/sai_tb3_sim/: CMakeLists.txt  README.md  package.xml
ws_ros2/src/sai_tb3_sim/launch/: robot.launch.py  sim.launch.py  world.launch.py
ws_ros2/src/sai_tb3_sim/worlds/: turtlebot3_world.world
