<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sai_tb3_sim</name>
  <version>0.1.0</version>
  <description>
    TurtleBot3 Gazebo simulation with decoupled world and robot model loading.
    Equivalent to turtlebot3_gazebo turtlebot3_world.launch.py, but world and
    robot are launched separately to make swapping robot models easy.
  </description>
  <maintainer email="cggosc@gmail.com">Gavin Gao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
